Demoproject/force-app/main/default/objects/Devops_Test__c/Devops_Test__c.object-meta.xml
<CustomObject>
    <label>UpSkill Training</label>
    <nameField>
        <label>Trainee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UpSkill Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>