Demoproject/force-app/main/default/objects/Devops_Test__c/fields/Trainee__c.field-meta.xml
<CustomField>
    <fullName>Trainee__c</fullName>
    <displayFormat>T-{0000}</displayFormat>
    <label>Trainee</label>
    <type>AutoNumber</type>
</CustomField>