Demoproject/force-app/main/default/objects/Devops_Test__c/fields/Trainee_Contact__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Contact__c</fullName>
    <label>Trainee Contact</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>