Demoproject/force-app/main/default/objects/Devops_Test__c/fields/Trainee_Email__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Email__c</fullName>
    <label>Trainee Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>