Demoproject/force-app/main/default/objects/Devops_Test__c/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <label>Training Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>