Demoproject/force-app/main/default/objects/Devops_Test__c/fields/Training_Fees__c.field-meta.xml
<CustomField>
    <fullName>Training_Fees__c</fullName>
    <label>Training Fees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>