Demoproject/force-app/main/default/objects/Devops_Test__c/fields/Training_Topics__c.field-meta.xml
<CustomField>
    <fullName>Training_Topics__c</fullName>
    <label>Training Topics</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devops</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>Copado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>